# baxter_kinematics_dynamics

./: .gitignore  LICENSE  README.md
baxter_kdl/: CMakeLists.txt  package.xml
baxter_kdl/include/baxter_kdl/: baxter_kdl.h
baxter_kdl/src/: baxter_kdl.cpp  baxter_kdl_example.cpp
baxter_kdl_test/: CMakeLists.txt  README.md  package.xml
baxter_kdl_test/src/: baxter_kdl_test.cpp
baxter_kinematics_dynamics/: CHANGELOG.rst  CMakeLists.txt  package.xml
