<?xml version="1.0"?>
<package>
  <name>baxter_kdl</name>
  <version>1.0.1</version>
  <description>The baxter_kdl package with KDL</description>

  <maintainer email="qrobotics@yeah.net">Qiang Qiu</maintainer>

  <license>GNU LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>baxter_core_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>baxter_core_msgs</run_depend>

  <export>

  </export>
</package>
