<package>
  <name>baxter_kinematics_dynamics</name>
  <version>1.0.1</version>
  <description>
      baxter kinematics and dynamics library with orocos KDL
  </description>

  <maintainer email="qrobotics@yeah.net">Qiang Qiu</maintainer>

  <license>GNU GPLv3</license>
  
  <author email="qrobotics@yeah.net">Qiang Qiu</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>baxter_kdl</run_depend>
  <run_depend>baxter_kdl_test</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
